added trending and searcg results

--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
 						<input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
 						<input type="submit" value="Go!" class="btn btn-primary">
 					</form>
+					<div id="search_results">
+						<h1>results</h1>
+					</div>
+
 				</div>
 				<div class="col-sm-8">
 					<div class="gif-gallery"></div>
+					<div  id="trending">
+						<h1>Trending</h1>
+						
+					</div> 
 				</div>
 			</div>
 		</div>
